--- a/newindex.html.html
+++ b/newindex.html.html
@@ -1,8 +1,7 @@
 <html>
-  <style>
- body>
+  <body>
 <h1> Employee Interests Survey from </h1>
-<form> action="/Employee_Interest.php"
+<form action="/Employee_Interest.php">
   <label for="Ename">Enter your name:</label>
   <input type="text" id="Ename" name="Ename"><br>
   <label for="Edepartment">Enter your department:</lable>
