--- a/newindex.html.html
+++ b/newindex.html.html
@@ -2,6 +2,7 @@
   <body>
 <h1> Employee Interests Survey from </h1>
 <form action="/Employee_Interest.php">
+<div align="center">
   <label for="Ename">Enter your name:</label>
   <input type="text" id="Ename" name="Ename"><br>
   <label for="Edepartment">Enter your department:</lable>
